@@ -383,7 +383,21 @@ query_process_notify(query_type* q, ldns_rr_type qtype, engine_type* engine)
             dnshandler_fwd_notify(engine->dnshandler, buffer_begin(q->buffer),
                 buffer_remaining(q->buffer));
         }
+    } else { /* Empty answer section, no SOA. We still need to process
+        the notify according to the RFC */
+        /* forward notify to xfrd */
+        if (addr2ip(q->addr, address, sizeof(address))) {
+            ods_log_verbose("[%s] forward notify for zone %s from client %s",
+                query_str, q->zone->name, address);
+        } else {
+            ods_log_verbose("[%s] forward notify for zone %s", query_str,
+                q->zone->name);
+        }
+        xfrd_set_timer_now(q->zone->xfrd);
+        dnshandler_fwd_notify(engine->dnshandler, buffer_begin(q->buffer),
+            buffer_remaining(q->buffer));
     }
+
     /* send notify ok */
     buffer_pkt_set_qr(q->buffer);
     buffer_pkt_set_aa(q->buffer);
