@@ -4,6 +4,7 @@
 * OpenDNSSEC-771: Signer. Do not log warning on deleting a missing 
   NSEC3PARAM RR.
 * OPENDNSSEC-801: Set AA flag on outgoing AXFR.
+* SUPPORT-191: Regression, Must accept notify without SOA (thanks Christos Trochalakis)
 
 OpenDNSSEC 2.0b1 - 2016-04-14
 
